# url_shortener

./: .env.example  LICENSE  README.md  pyproject.toml
app/: dependencies.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: repositories.py  unit_of_work.py
app/models/: link.py
app/schemas/: link.py
app/services/: shortener.py
tests/: conftest.py  test_shortener.py
